# aimrt_wkspace_template

./: .gitignore  CMakeLists.txt  README.md  app_start.sh  build.sh  compile.sh  pkg_start.sh  setup.sh
cmake/: GetAimRT.cmake
src/: CMakeLists.txt
src/protocols/: CMakeLists.txt  README.md
src/protocols/pb/example_pb/: CMakeLists.txt  chn_info.proto  rpc_info.proto
src/protocols/ros2/example_ros2/: CMakeLists.txt  package.xml
src/protocols/ros2/example_ros2/msg/: ChnInfo.msg
src/protocols/ros2/example_ros2/srv/: RpcInfo.srv
tools/: change_workspace.sh  config_template.yaml
